# somfy-protect-api

./: .gitignore  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
somfy_protect_api/: __init__.py  log.py
somfy_protect_api/api/: __init__.py  log.py  model.py  somfy_protect_api.py
somfy_protect_api/api/devices/: __init__.py  base.py  category.py  extender.py  indoor_camera.py  indoor_siren.py  infrared_sensor.py  intellitag.py  key_fob.py  link.py  myfox_camera.py  outdoor_camera.py  outdoor_siren.py  smoke_detector.py
tests/: test_somfy.py
