[tool.poetry]
name = "somfy-protect-api"
version = "0.1.4"
description = "A Somfy Protect API library"
authors = ["Minims <github@minims.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

